[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explorerlens"
version = "15.0.0"
description = "Python Windows Shell Extension thumbnail provider — 200+ formats"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.4.0",
    "pillow-heif>=0.18.0",
    "mutagen>=1.47.0",
    "platformdirs>=4.2.0",
]

[project.optional-dependencies]
full = [
    "rawpy>=0.21.0",
    "pymupdf>=1.24.0",
    "python-pptx>=1.0.0",
    "python-docx>=1.1.0",
    "cairosvg>=2.7.0",
    "fonttools>=4.50.0",
    "py7zr>=0.22.0",
    "rarfile>=4.2",
    "trimesh>=4.4.0",
    "ffmpeg-python>=0.2.0",
    "pywin32>=306",
    "comtypes>=1.4.0",
    "pystray>=0.19.0",
    "darkdetect>=0.8.0",
    "psutil>=5.9.0",
    "watchdog>=4.0.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "S", "T20", "UP"]
ignore = ["S603", "S607"]

[tool.flake8]
max-line-length = 100

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
